# task8-pbr-bloom

./: CMakeLists.txt  CMakePresets.json  README.md
assets/: AssetManager.cpp  AssetManager.h  AsyncLoader.cpp  AsyncLoader.h  Handle.h  LoadRequest.h  Model.h  Resource.h
assets/hdr/: simple_sky.hdr
components/: Camera.h  InputTag.h  MaterialPBR.h  Renderable.h  Transform.h
core/: Application.cpp  Application.h  GBuffer.cpp  GBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  SceneNode.cpp  SceneNode.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
docs/: README.md
ecs/: Component.h  Entity.h  Registry.h
post/: PostProcessor.cpp  PostProcessor.h
post/effects/: Bloom.cpp  Bloom.h  ToneMapping.cpp  ToneMapping.h
profiling/: Profiler.cpp  Profiler.h
shaders/: blit.vert  brdf_lut.frag  brdf_lut.vert  equirect2cube.frag  equirect2cube.vert  gbuffer_pbr.frag  gbuffer_pbr.vert  geometry.frag  irradiance_convolve.frag  light_marker.frag  light_marker.vert  lighting.frag  pbr_lighting.frag  prefilter_env.frag  prefilter_env.vert  skybox.frag  skybox.vert  view_gbuffer.frag
shaders/old/: cubeface_fullscreen.frag  cubeface_fullscreen.vert  geometry.vert  instanced.vert  model_forward.frag  model_forward.vert
shaders/pp/: bloom_extract.frag  gauss_blur.frag  tonemap.frag
systems/: CameraSystem.cpp  CameraSystem.h  RenderSystem.cpp  RenderSystem.h
